[package]
name = "chess"
version = "0.1.0"
authors = ["Alon <alonco124@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-http = "2.1.0"
serde = "1.0.117"
serde_json = "1.0.59"
linked-hash-map = "0.5.3"
rand = "0.7.3"
